<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtView_yourInput"
        android:id="@+id/txtView_yourInput"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"

        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextHoogte"
        android:layout_below="@+id/txtView_yourInput"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/editTextHoogte"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextGewicht"
        android:layout_below="@+id/editTextHoogte"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editTextHoogte"
        android:hint="@string/EditTextMass" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_update"
        android:id="@+id/buttonUpdate"
        android:layout_below="@+id/editTextGewicht"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtView_YourBMIInfo"
        android:id="@+id/txtView_YourBMIInfo"
        android:layout_below="@+id/buttonUpdate"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="28dp"
        android:layout_alignParentStart="true"

        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewResult"
        android:src="@drawable/silhouette_1"
        android:layout_below="@+id/txtView_YourBMIInfo"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtview_Index"
        android:id="@+id/textViewIndex"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/imageViewResult"
        android:layout_toEndOf="@+id/txtView_yourInput"
        android:layout_marginStart="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_info_first"
        android:id="@+id/textViewIndexInfo"
        android:layout_alignBottom="@+id/textViewIndex"
        android:layout_toEndOf="@+id/textViewIndex"
        android:layout_marginStart="27dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Category"
        android:id="@+id/textViewCategory"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/textViewIndex"
        android:layout_toEndOf="@+id/txtView_yourInput"
        android:layout_marginTop="34dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_info_first"
        android:id="@+id/textViewCategoryResult"
        android:layout_alignTop="@+id/textViewCategory"
        android:layout_alignStart="@+id/textViewIndexInfo" />


</RelativeLayout>
